_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    border-top: 4px solid $info;
    border-bottom: 1px solid $light-gray;
    min-height: 56px;

    // Positioning context for the mobile navigation icon
    position: relative;
}

.site-title {
    font-size: 26px;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    float: left;

    &,
    &:visited {
        color: $info;
    }

    i {
        color: #fff;
        background-color: $info;
        display: inline-block;
        padding: 10px;
        border-radius: 50%;
        width: 20px;
        height: 20px;
        line-height: 22px;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        color: $text;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: 20px;
        }
    }

    @include media-query($on-palm) {
        position: absolute;
        top: 9px;
        right: 30px;
        background-color: #fff;
        border: 1px solid $light-gray;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $dark-gray;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;
        }
    }
}



/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid $light-gray;
    padding: $spacing-unit 0;

    .contact-list {
        list-style: none;
        padding: 0;
        display: table;
        table-layout: fixed;
        width: 100%;

        li {
            display: table-cell;
            text-align: center;
            margin: 0;
            padding: 0;
        }
    }

    .copyright {
        text-align: center;
        color: $dark-gray;
    }
}

/**
 * Page content
 */
.page-content {
    padding: $spacing-unit 0;
}

.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;

        .post-title {
            margin-bottom: 0;
        }

        .post-meta {
            display: inline-block;
            margin-bottom: 10px;
        }
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $dark-gray;
}

.post-link {
    display: block;
    font-size: 24px;
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;
    color: $info;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

